PR target/36609 * config/avr/avr.c (avr_reorg): Create RTL for reversed compare with zero. * config/avr/avr.md  (QISI) : Define mode iterator. (negated_tst<mode>) : Redefine as split using mode macro. (reversed_tstqi): Define insn as reversed compare with zero. (reversed_tsthi): Ditto. (reversed_tstsi): Ditto.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140124 138bc75d-0d04-0410-961f-82ee72b054a4